--- a/espaceadmin.html
+++ b/espaceadmin.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Espace Administrateur</title>
 </head>
-<body class="espace_admin">
+<body class="espace_admin bgcolor">
 
     <div class="nav-scroll">
         <div class="line1"></div>
