--- a/historique.html
+++ b/historique.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Historique</title>
 </head>
-<body class="historique">
+<body class="historique bgcolor">
     <div class="nav-scroll">
         <div class="line1"></div>
         <div class="line2"></div>
