--- a/reglement.html
+++ b/reglement.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Document</title>
 </head>
-<body class="reglement">
+<body class="reglement bgcolor">
     <div class="nav-scroll">
         <div class="line1"></div>
         <div class="line2"></div>
