--- a/connexion.html
+++ b/connexion.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Document</title>
 </head>
-<body class="connexion">
+<body class="connexion bgcolor">
     <div class="nav-scroll">
         <div class="line1"></div>
         <div class="line2"></div>
