--- a/espaceauteur.html
+++ b/espaceauteur.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Espace Auteur</title>
 </head>
-<body class="espace_auteur">
+<body class="espace_auteur bgcolor">
 
     <div class="nav-scroll">
         <div class="line1"></div>
