--- a/espacejury.html
+++ b/espacejury.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Espace Jury</title>
 </head>
-<body class="espace_jury">
+<body class="espace_jury bgcolor">
     <div class="nav-scroll">
         <div class="line1"></div>
         <div class="line2"></div>
