--- a/inscriptionauteur.html
+++ b/inscriptionauteur.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Inscription Auteur(e)</title>
 </head>
-<body class="inscription_auteur">
+<body class="inscription_auteur bgcolor">
     <div class="nav-scroll">
         <div class="line1"></div>
         <div class="line2"></div>
