--- a/inscriptionjury.html
+++ b/inscriptionjury.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Inscription Jury</title>
 </head>
-<body class="inscription_jury">
+<body class="inscription_jury bgcolor">
     <div class="nav-scroll">
         <div class="line1"></div>
         <div class="line2"></div>
