--- a/resultcount.html
+++ b/resultcount.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/CSS/main_livres.css">
     <title>Temps restant</title>
 </head>
-<body class="resultcount">
+<body class="resultcount bgcolor">
 
     <div class="nav-scroll">
         <div class="line1"></div>
