--- a/change_mp.html
+++ b/change_mp.html
@@ -55,6 +55,7 @@
         <div class="item_connexion">
             <p>
 				<input type="submit" value="Valider" name="connect" id="connect" />
+                <!--MdP envoyé à la BDD-->
 			</p>
         </div>
     </div>
