--- a/espaceadmin.html
+++ b/espaceadmin.html
@@ -26,7 +26,7 @@
     </nav>
 
     <div class="title_espace_admin"><h1>Bienvenue dans l'espace Administrateur</h1></div>
-
+    <!--Gérer par la BDD-->
     <aside class="espace_admin_aside1">
         <p>Auteurs inscrits :</p>
         <p>
