--- a/historique.html
+++ b/historique.html
@@ -33,7 +33,7 @@
             <li class="sidebar_index_item sidebar_index_item4"><a href="#">Bibliographie</a></li>
         </ul>
     </aside>
-
+    <!--Gérer par la BDD-->
     <div class="main_historique">
         <ul class="date_historique">
             <li class="item_date_historique">
