--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <div class="indexmedia">
         <div class="item_indexmedia"><p>Actualité</p></div>
         <div class="item_indexmedia"><p>Réseaux Sociaux</p></div>
+        <!--À ajouter un hashtag ou compte du concours pour afficher les derniers Tweets posts... (iframe)-->
     </div>
     <div class="indeximg2"><img src="images/indexfooter.jpg" alt=""></div>
     
