--- a/oeuvresind.html
+++ b/oeuvresind.html
@@ -25,7 +25,7 @@
     </nav>
 
     <div class="title_oeuvres_ind"><h1>Concours de livres</h1></div>
-
+    <!--Provient de la BDD-->
     <div class="disp_oeuvres_ind">
         <img src="images/livreind.png" alt="Couverture Titre"/>
         <p>TITRE</p>
