--- a/espacejury.html
+++ b/espacejury.html
@@ -81,6 +81,9 @@
        <label for="documentaire">Documentaire</label></p>
       <p><input type="checkbox" id="biographie" name="biographie">
         <label for="biographie">Biographie</label></p>
+        <p>
+        <input type="checkbox" name="sexe" value="homme" required/> Je déclare avoir compris qu'après validation, il sera impossible de modifier les catégories à évaluer.
+        </p>
         <input type="submit" value=" Valider " id="button2" /> 
         <!--Envoie à BDD et plus de possibilité de changer : Bouton disparait, impossible modifier checkboxes-->
     </div>
